--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,4 +1,4 @@
-section{
+.home{
     position:relative;
     display: flex;
     flex-direction: column;
@@ -17,15 +17,15 @@ h3{
 }
 
 span{
-    color: var(--detail-1);
+    color: var(--artists);
 }
 
 span:nth-child(2){
-    color: var(--detail-2);
+    color: var(--albums);
 }
 
 span:nth-child(3){
-    color: var(--detail-3);
+    color: var(--playlists);
 }
 
 button{
@@ -53,9 +53,9 @@ button img {
 
 
 button:hover{
-    color: var(--background-colour);
-    background-color: var(--detail-1);
-    border: var(--detail-2) 2px solid;
+    color: var(--main-text-colour);
+    background-color: var(--background-colour);
+    border: var(--main-text-colour) 2px solid;
 }
 
 button:hover img{
@@ -91,17 +91,3 @@ button:hover img{
     left: 14%;
     z-index: -3;
 }
-
-/*section:before{*/
-/*    content: "";*/
-/*    position: absolute;*/
-/*    z-index: -1;*/
-/*    background-color: var(--detail-1);*/
-/*    border: var(--detail-2) 2px solid;*/
-/*    top: -14%;*/
-/*    width: 100%;*/
-/*    height: 10%;*/
-/*    webkit-transform: skewY(-12deg);*/
-/*    transform: skewY(-12deg);*/
-/*    overflow: hidden;*/
-/*}*/
