--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -37,6 +37,29 @@ li {
     margin: 3.9vh;
 }
 
+@media only screen and (max-width: 700px){
+    nav{
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: calc(100vh - 16.11vw);
+        height: auto;
+        z-index: 1;
+    }
+
+    ul{
+        flex-direction: row;
+    }
+
+    .nav img{
+        width: 8.31vw;
+        height: 8.31vw;
+        margin: 3.9vw;
+    }
+}
+
+
 section{
     width: 100%;
     display: flex;
@@ -57,9 +80,10 @@ section{
     box-shadow: 0px 2px 2.5px 2.5px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    align-items: center;
     justify-content: space-around;
-
+    width: 240px;
+    margin: 2%
 }
 
 .medallion:first-child{
@@ -80,5 +104,29 @@ section{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.panel{
+    margin: 3%;
+    border-radius: 3px;
+    display: flex;
+    width: 256px;
+    height: 128px;
+    box-shadow: 0px 2px 2.5px 2.5px rgba(0, 0, 0, 0.1);
+}
+
+.panel div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    margin: 2%;
+}
+
+.panel img{
+    width: 128px;
+    height: 128px;
+    z-index: 0;
 }
 
