--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -7,7 +7,7 @@ nav{
     top: 0;
     height: 100vh;
     background-color: var(--main-text-colour);
-    box-shadow: 5px 0px 2.5px 2.5px rgba(0, 0, 0, 0.1);
+    box-shadow: 5px 0 2.5px 2.5px rgba(0, 0, 0, 0.1);
 }
 
 ul{
@@ -44,6 +44,158 @@ li {
 
 }
 
+
+
+.item{
+
+    width: 160px;
+    margin: 6px;
+    box-shadow: 0px 2px 2.5px 2.5px rgba(0, 0, 0, 0.1);
+
+}
+
+.item img{
+
+    width: 160px;
+    height: 160px;
+
+}
+
+.item-details{
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /*align-content: center;*/
+
+}
+
+.item-details *{
+
+    margin: 2px;
+
+}
+
+.artist-hero {
+
+    background-color: var(--artists);
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    margin-bottom: 5px;
+    box-shadow: 0px 2px 2.5px 2.5px rgba(0, 0, 0, 0.1);
+    padding: 5px 0;
+
+}
+
+.medallion {
+
+    margin: 7px 0;
+    background-color: var(--background-colour);
+    box-shadow: 0px 2px 2.5px 2.5px rgba(0, 0, 0, 0.1);
+
+}
+
+.medallion img{
+
+    width: 320px;
+    height: 320px;
+
+}
+
+.medallion div {
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5px;
+
+}
+
+.medallion div h1, h3{
+
+    margin: 0;
+
+}
+
+.load-more-container{
+
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 160px;
+    margin: 6px;
+
+}
+
+.circular-button{
+
+    height: 75px;
+    width: 75px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    border-radius: 50%;
+    border: 2px solid var(--main-text-colour);
+
+    color: var(--background-colour);
+
+    background-color: var(--main-text-colour);
+    transition: background 250ms ease-in-out;
+
+    box-shadow: 0px 2px 2.5px 2.5px rgba(0, 0, 0, 0.1);
+
+}
+
+.circular-button:hover, .circular-button:focus{
+
+    color: var(--main-text-colour);
+    background-color: var(--background-colour);
+
+}
+
+.sort-button{
+
+    position: fixed;
+    right: 5vw;
+    bottom: 5vh;
+
+    background-image: url("../images/send-white.png");
+    background-position: center;
+    background-size: 50px;
+    background-repeat: no-repeat;
+
+}
+
+.sort-button:hover {
+
+    background-image: url("../images/send-blue.png");
+
+}
+
+.loading{
+
+    margin: 0 auto;
+
+}
+
+.footer{
+
+    padding: 10px;
+    color: var(--background-colour);
+    background-color: var(--main-text-colour);
+
+}
+
+.footer a{
+
+    color: var(--home);
+
+}
+
 @media only screen and (max-width: 768px){
     nav{
         position: fixed;
@@ -74,45 +226,18 @@ li {
         flex-direction: column;
     }
 
-    .items-list{
-        margin-bottom: 16.11vw;
+    .footer{
+        padding-bottom: 16.11vw;
+    }
+
+    .sort-button {
+        position: fixed;
+        right: 5vw;
+        bottom: 12vh;
     }
 }
 
 
-
-.item{
-
-    width: 160px;
-    margin: 6px;
-    box-shadow: 0px 2px 2.5px 2.5px rgba(0, 0, 0, 0.1);
-
-}
-
-.item img{
-
-    width: 160px;
-    height: 160px;
-
-}
-
-.item-details{
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-.item-details *{
-
-    margin: 2px;
-
-}
-
-.loading{
-    margin: 0 auto;
-}
 
 
 
